--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint src",
     "preview": "vite preview",
     "prepare": "husky"
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@types/three": "^0.169.0",
     "@uiw/react-amap": "^6.0.5",
     "@univerjs/core": "^0.2.11",
     "@univerjs/design": "^0.2.11",
